autumn/tests/compile-fail/static_get_path_params.stderr
error: static_get does not support path parameters yet. Use #[get] for parameterized routes.
 --> tests/compile-fail/static_get_path_params.rs:3:14
  |
3 | #[static_get("/posts/{slug}")]
  |              ^^^^^^^^^^^^^^^
